# freeze-thaw-soil-prediction

./: .gitignore  ISMN_data_cleaning.ipynb  ISMN_data_cleaning_utils.py  ISMN_site_survey.csv  README.md  environment.yml  pyproject.toml  requirements.txt  utils.py
data/raw/ASCAT/: 1178404_-99.130_45.712_Aberdeen-35-WNW_ascat_time_series.csv  1198089_-99.478_46.770_Jamestown-38-WSW_ascat_time_series.csv  1490385_-148.910_64.690_Nenana_ascat_time_series.csv  1514772_-150.670_66.750_GobblersKnob_ascat_time_series.csv  1520910_26.686_67.359_SOD103_ascat_time_series.csv  846305_91.679_31.033_L38_ascat_time_series.csv  847525_92.309_31.107_L23_ascat_time_series.csv  917683_102.550_33.900_NST-09_ascat_time_series.csv  918670_102.350_33.983_NST-07_ascat_time_series.csv
data/raw/ERA/: 1178404_-99.130_45.712_Aberdeen-35-WNW_era5_time_series.csv  1490385_-148.910_64.690_Nenana_era5_time_series.csv  1514772_-150.670_66.750_Gobblers-Knob_era5_time_series.csv  1520910_26.634_67.362_SOD012_era5_time_series.csv  (+1 more)
notebooks/: ASCAT_ERA5_data_cleaning.ipynb  ISMN_data_cleaning.ipynb  model_training_testing.ipynb
src/: ASCAT_ERA5_data_cleaning.py  ISMN_data_cleaning_utils.py  combine_dfs.py  constants.py  general_data_cleaning_utils.py  internal_functions.py  process_dfs.py  pull_ASCAT_ERA5_data.py
src/data_cleaning/: ASCAT_ERA5.py  ISMN.py  general.py
src/data_preparation/: ASCAT_ERA5.py  ISMN.py  ascat_era5.py  general.py  ismn.py  ismn_preprocessing.py  nan_handling.py  outlier_detection.py  visualization.py
src/freeze_thaw/: combine_dfs.py  constants.py  internal_functions.py
(+10 files in other folders)
